Lab02/cloudformation/security-groups.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Security Groups for public and private EC2 instances.

Parameters:
  VPCId:
    Type: String
    Description: VPC ID where the security groups will be created

  MyIp:
    Type: String
    Description: Your public IP in CIDR notation 
    Default: 171.224.240.4/32

Resources:
  Nhom16PublicSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH only from specific IP (Public SG)
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref MyIp
      SecurityGroupEgress:
        - IpProtocol: -1  # Allow all outbound traffic
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: Nhom16_Public_SG

  Nhom16PrivateSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH only from Public EC2 instance (Private SG)
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref Nhom16PublicSG
      SecurityGroupEgress:
        - IpProtocol: -1  # Allow all outbound traffic
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: Nhom16_Private_SG

Outputs:
  Nhom16PublicSecurityGroup:
    Description: Security Group ID for Public EC2
    Value: !Ref Nhom16PublicSG
  Nhom16PrivateSecurityGroup:
    Description: Security Group ID for Private EC2
    Value: !Ref Nhom16PrivateSG
